fix image display in blog post so it never stretches outside the frame

--- a/_sass/cambermast/layout/_blog-post.scss
+++ b/_sass/cambermast/layout/_blog-post.scss
@@ -3,4 +3,9 @@
     margin-top: 25px;
     margin-left: $gridMarginLeft;
     margin-right: $gridMarginRight;
+
+    img {
+        max-width: 50%;
+        height: auto;
+    }
 }
